--- a/static/global.css
+++ b/static/global.css
@@ -5,6 +5,7 @@
 	--color-light: #E5E5E5;
 	--color-dark: #3D3D3D;
 	--color-gray: #7B7B7B;
+	--color-gray_light: #959CA1;
 	--color-star: #F39C12;
 }
 
